v. 0.17.20
- decrease overall cost in harder logistic
- add time evolution reduction
- balanced recipe for angel-bio compatibility

v. 0.17.19
- fix electric-energy-accumulators-1 => electric-energy-accumulators
- add function to get momo sci category
- add temp fix for MSP-9

v. 0.17.18
- fix recipe missing machine

v. 0.17.17
- fix missing recipe

v. 0.17.16
- fix error when player not have recipe-category bob-distillery
- add complex crafting for angel bio process science pack
- fix missing science vial in recipe when science cost tweak are enabled

v. 0.17.15
- bobextended electronics now use progress electronics and expensive wire settings
- add harder recipe for logistics

v. 0.17.14
- improve bobextended frame 1 unlock function 

v. 0.17.13
- remove tin-plate from transport-belt if player don't have basic-transport-belt
- balance vial recipe again
- fix angels-plate-silicon

v. 0.17.12
- balanced exporation token recipe from wood
- basic structure components now unlock at steel tech 

v. 0.17.11
- fix unable to craft memory unit 1
- balance vial recipe

v. 0.17.10
- fix when player don't have MSP-30
- advanced fluid handling can be unlock early
- improve evolution reduction feature
- add support for angel bio process

v. 0.17.9
- add compatibility with ScienceCostTweak

v. 0.17.8
- bio ins dart ammo cost least wood
- add battery to power pole
- change building-pack recipe to use iron stick
- omnilib now can craft green science 

v. 0.17.7
- hot fix add unlock mixing furnace to optics research

v. 0.17.6
- hot fix can't start when bobextended electronics disable

v. 0.17.5
- add advanced-plastics and plate-pack-1 back
- balanced science recipe to match version 0.17
- balanced robot recipe
- add bob extended electronics
- add bob extended melt ore to slag
- include glass into some recipe
- add modular chest support
- add lead ammo crafting 
- move gem to bob raw material

v. 0.17.4
- lamp now use glass
- add fix for omnilib